eaton.frontend/src/components/text/css/views/_view-statement.scss
//-----------------------------------
// Component: Text - View: Statement
//-----------------------------------
.eaton-text-statement {

  &__content {
    padding: 15px 0 15px 30px;
    border-left: 10px solid $color__primary-blue;
    font-family: Arial;
    font-style: italic;
    color: $color__primary-gray3;
    margin: 0;
  }

  //-----------------------------------
  // Media-Query: Mobile
  //-----------------------------------
  @include media-mobile-and-tablet {
    &__content {
      font-size: 2.375em;
    }
  }

  //-----------------------------------
  // Media-Query: Desktop
  //-----------------------------------
  @include media-desktop-and-up {
    &__content {
      font-size: 1.625em;
    }
  }
}

